Forfra på preferencemanager

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".HangManSpil" />
-        <activity android:name=".Highscore"></activity>
+        <activity android:name=".Highscore" />
+
     </application>
 
 </manifest>
